# psychopy-plugin-template

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  scratch
.github/.legacy/: docs_md.yaml
.github/workflows/: docs.yaml  docs_md.yaml  docs_sphinx.yaml  pypi.yaml  tests.yaml
docs/: .buildinfo  SUMMARY.md  generateAPI.py  generatePages.py  genindex.html  index.html  objects.inv  searchindex.js
docs/.doctrees/: download.doctree  environment.pickle  index.doctree
docs/.doctrees/app/: ExamplePluginRibbonSection.doctree
docs/.doctrees/builder/components/: ExampleComponent.doctree
docs/.doctrees/coder/: ExampleDevice.doctree  ExampleResponseDevice.doctree  ExampleVisualStim.doctree
docs/_modules/: index.html
docs/_sources/app/: ExamplePluginRibbonSection.rst.txt
docs/_sources/coder/: ExampleDevice.rst.txt  ExampleVisualStim.rst.txt
docs/api/: index.md
docs/api/hardware/: exampleDevice.md
docs/api/visual/: exampleVisualStim.md
docs/app/ExamplePluginRibbonSection/: index.html
docs/builder/: index.md
docs/builder/components/: ExampleComponent.md
docs/builder/routines/: ExampleStandaloneRoutine.md
docs/coder/: ExampleVisualStim.md
docs/coder/ExampleDevice/: index.html
docs/coder/ExampleResponseDevice/: index.html
docs/coder/ExampleVisualStim/: index.html
docs/download/: index.html
docs/genindex/: index.html
docs/search/: index.html
docs/source/: index.rst
docs_md/_style/: psychopy.css
docs_md/api/components/: index.md
docs_md/api/hardware/: exampleResponseDevice.md
docs_md/api/routines/: index.md
docs_md/coder/: ExampleResponseDevice.md
docs_mkdocs/: generateAPI.py  generatePages.py  index.md
docs_mkdocs/_style/: psychopy.css
docs_mkdocs/api/: index.md
docs_mkdocs/api/components/: index.md
docs_mkdocs/api/hardware/: exampleDevice.md  exampleResponseDevice.md  index.md
docs_mkdocs/api/routines/: index.md
docs_mkdocs/api/visual/: exampleVisualStim.md  index.md
docs_mkdocs/builder/components/: index.md
docs_mkdocs/coder/: ExampleDevice.md  index.md
docs_mkdocs/overrides/: root.html
docs_mkdocs/style/: psychopy.css
docs_sphinx/: .buildinfo  genindex.html  index.html  make.bat  objects.inv  search.html
docs_sphinx/coder/: ExampleDevice.rst  ExampleResponseDevice.rst
docs_sphinx/source/: conf.py
docs_sphinx/source/coder/: ExampleDevice.rst  ExampleVisualStim.rst
docs_src/: conf.py  download.rst  generatePages.py  index.rst
docs_src/builder/routines/: ExampleStandaloneRoutine.rst
docs_src/coder/: ExampleDevice.rst  ExampleResponseDevice.rst  ExampleVisualStim.rst
psychopy-plugin-template/hardware/: exampleResponseDevice.py
psychopy-plugin-template/routines/exampleStandaloneRoutine/: __init__.py
psychopy_example_plugin/components/exampleComponent/: __init__.py
psychopy_example_plugin/hardware/: exampleDevice.py  exampleResponseDevice.py
psychopy_example_plugin/visual/: exampleVisualStim.py
psychopy_plugin_template/: __init__.py
psychopy_plugin_template/app/: ribbon.py
psychopy_plugin_template/components/exampleComponent/: icons.afdesign
psychopy_plugin_template/hardware/: __init__.py  exampleDevice.py
psychopy_plugin_template/icons/example/: example.afdesign
psychopy_plugin_template/visual/: exampleVisualStim.py
tests/: test_entry_points.py
tests/test_builder/: test_ExampleComponent.py
tests/test_coder/: test_ExampleVisualStim.py
(+15 files in other folders)
